@@ -1,0 +1,4 @@
+#include <sys/cdefs.h>
+#include <sys/types.h>
+
+ssize_t __mbrtox(const char* restrict in,size_t len,uint32_t* restrict num);
